--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
       "@/*": ["src/*"],
     }
   },
-  "include": ["./**/*.d.ts", "./**/*.ts", "./**/*.tsx"]
+  "include": ["./**/*.d.ts", "./**/*.ts", "./**/*.tsx", "src/mock/user.js", "src/mock/index.js"]
 }
